MB-0107 | mining activation statistic
